merger with ali2

--- a/philipp/package.json
+++ b/philipp/package.json
@@ -12,6 +12,7 @@
   "author": "Ali Alhayek",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^7.1.1",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "client": "file:client",
